Added Pi4J Support

--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,6 @@
         <module>Bungee</module>
         <module>Velocity</module>
         <module>Sponge</module>
+        <module>Pi4J</module>
     </modules>
 </project>
