--- a/Discord4J/pom.xml
+++ b/Discord4J/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>event-chain-velocity</artifactId>
+    <artifactId>event-chain-discord4j</artifactId>
     <version>1.0.3</version>
 
     <build>
@@ -50,10 +50,6 @@
 
     <repositories>
         <repository>
-            <id>velocity</id>
-            <url>https://repo.velocitypowered.com/snapshots/</url>
-        </repository>
-        <repository>
             <id>egg82-ninja</id>
             <url>https://www.myget.org/F/egg82-java/maven/</url>
         </repository>
@@ -61,9 +57,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.velocitypowered</groupId>
-            <artifactId>velocity-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.discord4j</groupId>
+            <artifactId>Discord4J</artifactId>
+            <version>2.10.1</version>
             <scope>provided</scope>
         </dependency>
 
