--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,7 @@
         <module>Velocity</module>
         <module>Sponge</module>
         <module>Pi4J</module>
+        <module>Discord4J</module>
+        <module>JDA</module>
     </modules>
 </project>
