--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
         <module>Pi4J</module>
         <module>Discord4J</module>
         <module>JDA</module>
+        <module>KittehIRC</module>
     </modules>
 </project>
