--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>event-chain-common</artifactId>
-    <version>1.1.10</version>
+    <version>${eventchain.version}</version>
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -52,7 +52,6 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0-M1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
