--- a/Pi4J/pom.xml
+++ b/Pi4J/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>event-chain-pi4j</artifactId>
-    <version>1.1.10</version>
+    <version>${eventchain.version}</version>
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -50,10 +50,6 @@
 
     <repositories>
         <repository>
-            <id>egg82-ninja</id>
-            <url>https://www.myget.org/F/egg82-java/maven/</url>
-        </repository>
-        <repository>
             <id>oss-snapshots</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
@@ -76,13 +72,11 @@
         <dependency>
             <groupId>ninja.egg82</groupId>
             <artifactId>event-chain-common</artifactId>
-            <version>1.1.10</version>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0-M1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
