--- a/Sponge/pom.xml
+++ b/Sponge/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>event-chain-sponge</artifactId>
-    <version>1.1.10</version>
+    <version>${eventchain.version}</version>
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -59,20 +59,17 @@
         <dependency>
             <groupId>org.spongepowered</groupId>
             <artifactId>spongeapi</artifactId>
-            <version>7.2.0</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>ninja.egg82</groupId>
             <artifactId>event-chain-common</artifactId>
-            <version>1.1.10</version>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0-M1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
