--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,39 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <eventchain.version>1.1.10</eventchain.version>
+        <eventchain.version>1.1.11</eventchain.version>
+
+        <bukkit.version>1.8-R0.1-SNAPSHOT</bukkit.version>
+        <bungee.version>1.8-SNAPSHOT</bungee.version>
+        <jda.version>4.2.0_168</jda.version>
+        <kitteh.version>7.3.0</kitteh.version>
+        <pi4j.version>1.3-SNAPSHOT</pi4j.version>
+        <sponge.version>7.3.0</sponge.version>
+        <velocity.version>1.1.3</velocity.version>
+
+        <junit.version>5.7.0</junit.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>jdk-8-config</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk-11-config</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <properties>
+                <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -41,6 +72,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
+                <configuration>
+                    <source>8</source>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -71,6 +105,15 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -88,53 +131,6 @@
                 <artifactId>event-chain-common</artifactId>
                 <version>${eventchain.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>5.7.0-M1</version>
-            </dependency>
-
-            <!-- Bukkit -->
-            <dependency>
-                <groupId>org.bukkit</groupId>
-                <artifactId>bukkit</artifactId>
-                <version>1.8-R0.1-SNAPSHOT</version>
-            </dependency>
-
-            <!-- Bungee -->
-            <dependency>
-                <groupId>net.md-5</groupId>
-                <artifactId>bungeecord-api</artifactId>
-                <version>1.8-SNAPSHOT</version>
-            </dependency>
-
-            <!-- JDA -->
-            <dependency>
-                <groupId>net.dv8tion</groupId>
-                <artifactId>JDA</artifactId>
-                <version>4.1.1_141</version>
-            </dependency>
-
-            <!-- KittehIRC -->
-            <dependency>
-                <groupId>org.kitteh.irc</groupId>
-                <artifactId>client-lib</artifactId>
-                <version>7.2.2</version>
-            </dependency>
-
-            <!-- Sponge -->
-            <dependency>
-                <groupId>org.spongepowered</groupId>
-                <artifactId>spongeapi</artifactId>
-                <version>7.2.0</version>
-            </dependency>
-
-            <!-- Velocity -->
-            <dependency>
-                <groupId>com.velocitypowered</groupId>
-                <artifactId>velocity-api</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -142,10 +138,10 @@
         <module>Common</module>
         <module>Bukkit</module>
         <module>Bungee</module>
-        <module>Velocity</module>
-        <module>Sponge</module>
-        <module>Pi4J</module>
         <module>JDA</module>
         <module>KittehIRC</module>
+        <module>Pi4J</module>
+        <module>Sponge</module>
+        <module>Velocity</module>
     </modules>
 </project>
