--- a/Bukkit/pom.xml
+++ b/Bukkit/pom.xml
@@ -97,6 +97,18 @@
             <groupId>ninja.egg82</groupId>
             <artifactId>event-chain-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ninja.egg82</groupId>
+            <artifactId>event-chain-api</artifactId>
+        </dependency>
+
+        <!-- API -->
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
