--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -71,6 +71,19 @@
 
     <dependencies>
         <dependency>
+            <groupId>ninja.egg82</groupId>
+            <artifactId>event-chain-api</artifactId>
+        </dependency>
+
+        <!-- API -->
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
