--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,19 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <eventchain.version>2.0.2</eventchain.version>
+        <eventchain.version>2.0.3</eventchain.version>
         <api.version>1.0.0</api.version>
 
         <bukkit.version>1.8-R0.1-SNAPSHOT</bukkit.version>
         <bungee.version>1.8-SNAPSHOT</bungee.version>
-        <jda.version>4.2.0_168</jda.version>
-        <kitteh.version>7.3.0</kitteh.version>
-        <pi4j.version>1.3-SNAPSHOT</pi4j.version>
+        <jda.version>4.2.0_228</jda.version>
+        <kitteh.version>7.4.0</kitteh.version>
+        <pi4j.version>1.3</pi4j.version>
         <sponge.version>7.3.0</sponge.version>
-        <velocity.version>1.1.3</velocity.version>
+        <velocity.version>1.1.4</velocity.version>
 
-        <junit.version>5.7.0</junit.version>
+        <jetbrains.version>20.1.0</jetbrains.version>
+        <junit.version>5.8.0-M1</junit.version>
     </properties>
 
     <profiles>
@@ -52,7 +53,10 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.8.1</version>
+                <configuration>
+                    <rulesUri>file:///${project.basedir}/versions.xml</rulesUri>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -89,7 +93,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M2</version>
+                <version>3.0.0-M3</version>
                 <executions>
                     <execution>
                         <id>enforce-maven</id>
@@ -110,7 +114,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
