--- a/Bukkit/pom.xml
+++ b/Bukkit/pom.xml
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>${jetbrains.version}</version>
             <scope>provided</scope>
         </dependency>
 
