--- a/Pi4J/pom.xml
+++ b/Pi4J/pom.xml
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>${jetbrains.version}</version>
             <scope>provided</scope>
         </dependency>
 
