--- a/Velocity/pom.xml
+++ b/Velocity/pom.xml
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>${jetbrains.version}</version>
             <scope>provided</scope>
         </dependency>
 
