--- a/.editorconfig
+++ b/.editorconfig
@@ -118,9 +118,9 @@ ij_java_keep_indents_on_empty_lines = false
 ij_java_keep_line_breaks = true
 ij_java_keep_multiple_expressions_in_one_line = false
 ij_java_keep_simple_blocks_in_one_line = false
-ij_java_keep_simple_classes_in_one_line = false
-ij_java_keep_simple_lambdas_in_one_line = false
-ij_java_keep_simple_methods_in_one_line = false
+ij_java_keep_simple_classes_in_one_line = true
+ij_java_keep_simple_lambdas_in_one_line = true
+ij_java_keep_simple_methods_in_one_line = true
 ij_java_label_indent_absolute = true
 ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = end_of_line
@@ -213,7 +213,7 @@ ij_java_spaces_around_unary_operator = false
 ij_java_spaces_within_angle_brackets = false
 ij_java_spaces_within_annotation_parentheses = false
 ij_java_spaces_within_array_initializer_braces = true
-ij_java_spaces_within_braces = false
+ij_java_spaces_within_braces = true
 ij_java_spaces_within_brackets = false
 ij_java_spaces_within_cast_parentheses = false
 ij_java_spaces_within_catch_parentheses = false
