Javadoc warnings fixed, new Sponge repo

--- a/Sponge/pom.xml
+++ b/Sponge/pom.xml
@@ -84,7 +84,7 @@
     <repositories>
         <repository>
             <id>sponge</id>
-            <url>http://repo.spongepowered.org/maven/</url>
+            <url>https://repo.spongepowered.org/repository/maven-public/</url>
         </repository>
     </repositories>
 
