--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <eventchain.version>3.1.2</eventchain.version>
+        <eventchain.version>3.1.3-SNAPSHOT</eventchain.version>
         <api.version>2.1.1</api.version>
 
         <bukkit.version>1.8-R0.1-SNAPSHOT</bukkit.version>
