--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,20 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <eventchain.version>3.1.3-SNAPSHOT</eventchain.version>
+        <eventchain.version>3.1.3</eventchain.version>
         <api.version>2.1.1</api.version>
 
         <bukkit.version>1.8-R0.1-SNAPSHOT</bukkit.version>
         <bungee.version>1.8-SNAPSHOT</bungee.version>
-        <jda.version>4.2.0_241</jda.version>
-        <kitteh.version>7.4.0</kitteh.version>
+        <jda.version>4.2.0_247</jda.version>
+        <kitteh.version>8.0.0</kitteh.version>
         <kyori-event.version>3.0.0</kyori-event.version>
         <pi4j.version>1.3</pi4j.version>
         <sponge.version>7.3.0</sponge.version>
-        <velocity.version>1.1.4</velocity.version>
+        <velocity.version>3.0.1</velocity.version>
 
-        <jetbrains.version>20.1.0</jetbrains.version>
-        <junit.version>5.8.0-M1</junit.version>
+        <jetbrains.version>22.0.0</jetbrains.version>
+        <junit.version>5.8.1</junit.version>
     </properties>
 
     <profiles>
@@ -120,10 +120,43 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <serverId>nexus</serverId>
+                    <nexusUrl>https://nexus.egg82.me/</nexusUrl>
+                    <skipStaging>true</skipStaging>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
     <distributionManagement>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>https://nexus.egg82.me/repository/maven-snapshots/</url>
+        </snapshotRepository>
         <repository>
             <id>nexus</id>
             <url>https://nexus.egg82.me/repository/maven-releases/</url>
