--- a/JDA-Release/pom.xml
+++ b/JDA-Release/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>event-chain-jda</artifactId>
+    <artifactId>event-chain-jda-release</artifactId>
     <version>${eventchain.version}</version>
 
     <build>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>${jda.version}</version>
+            <version>${jda.release.version}</version>
             <scope>provided</scope>
         </dependency>
 
